# ayeauth

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  Dockerfile  LICENSE.txt  README.rst  requirements.txt  run.py  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst
src/ayeauth/: __init__.py  cli.py  config.py  loader.py
src/ayeauth/application/: forms.py  routes.py
src/ayeauth/application/templates/: all_applications.html  create.html  single_application.html
src/ayeauth/auth/: decorators.py  forms.py  loader.py  password.py  routes.py  token.py
src/ayeauth/auth/templates/: register.html
src/ayeauth/home/: routes.py
src/ayeauth/models/: __init__.py  application.py  application_scope.py  authorization_code.py  role.py  scope.py  user.py  user_authorized_application.py  user_role.py
src/ayeauth/oauth/: forms.py  routes.py  token.py
src/ayeauth/oauth/templates/: authorize.html
src/ayeauth/templates/: error.html  footer.html  index.html  layout.html  navigation.html
src/ayeauth/templates/auth/: login.html
src/ayeauth/user/: forms.py  routes.py
src/ayeauth/user/templates/: profile.html  settingblock.html  settingblock_applications.html  settingblock_profile.html  settings.html
src/ayeauth/users/: models.py  routes.py
tests/: conftest.py
