[metadata]
name = ayeauth
description = the ayeama authentication server
author = ayeama
author-email = alex.michael.adams@gmail.com
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/ayeama/ayeauth
project-urls =
    Documentation = https://ayeauth.readthedocs.io
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
install_requires =
    click
    bcrypt
    passlib
    cryptography
    pyjwt
    wtforms
    flask
    flask-sqlalchemy
    flask-login
    flask-wtf
    flask-principal
tests_require =
    pre-commit
    pytest
    pytest-cov
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pre-commit
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    ayeauth = ayeauth.cli:main

[test]
extras = True

[tool:pytest]
addopts =
    --cov ayeauth --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
